@@ -10,7 +10,7 @@ Feature: Basic smell detection
     Then the exit status indicates smells
     And it reports:
     """
-    spec/samples/inline.rb -- 41 warnings (+1 masked):
+    spec/samples/inline.rb -- 41 warnings:
       File has no descriptive comment (Irresponsible Module)
       Inline declares the class variable @@directory (Class Variable)
       Inline declares the class variable @@rootdir (Class Variable)
