@@ -10,9 +10,8 @@ module Reek
 
       SMELL_FORMAT = '%m%c %w (%s)'
 
-      def initialize(examiner, display_masked_warnings)
+      def initialize(examiner)
         @examiner = examiner
-        @display_masked_warnings = display_masked_warnings  # SMELL: Control Couple
       end
 
       # Creates a formatted report of all the +Smells::SmellWarning+ objects recorded in
@@ -31,36 +30,26 @@ module Reek
       end
 
       def header
-        "#{@examiner.description} -- #{visible_header}#{masked_header}"
+        "#{@examiner.description} -- #{visible_header}"
       end
 
       # Creates a formatted report of all the +Smells::SmellWarning+ objects recorded in
       # this report.
       def smell_list
-        if @display_masked_warnings
-          result = @examiner.all_smells.map {|smell| "  #{smell.report(SMELL_FORMAT)}"}
-        else
-          result = @examiner.all_active_smells.map {|smell| "  #{smell.report(SMELL_FORMAT)}"}
-        end
-        result.join("\n")
+        @examiner.smells.map {|smell| "  #{smell.report(SMELL_FORMAT)}"}.join("\n")
       end
 
     private
 
       def should_report
-        @examiner.num_active_smells > 0 or (@display_masked_warnings and @examiner.num_masked_smells > 0)
+        @examiner.num_smells > 0
       end
 
       def visible_header
-        num_smells = @examiner.all_active_smells.length
+        num_smells = @examiner.smells.length
         result = "#{num_smells} warning"
         result += 's' unless num_smells == 1
         result
-      end
-
-      def masked_header
-        num_masked_warnings = @examiner.num_masked_smells
-        num_masked_warnings == 0 ? '' : " (+#{num_masked_warnings} masked)"
       end
     end
 
@@ -68,8 +57,8 @@ module Reek
     # A report that lists every source, including those that have no smells.
     #
     class VerboseReport
-      def initialize(examiner, display_masked_warnings)
-        @reporter = ReportSection.new(examiner, display_masked_warnings)
+      def initialize(examiner)
+        @reporter = ReportSection.new(examiner)
       end
       def report
         @reporter.verbose_report
@@ -80,8 +69,8 @@ module Reek
     # A report that lists a section for each source that has smells.
     #
     class QuietReport
-      def initialize(examiner, display_masked_warnings)
-        @reporter = ReportSection.new(examiner, display_masked_warnings)
+      def initialize(examiner)
+        @reporter = ReportSection.new(examiner)
       end
       def report
         @reporter.quiet_report
