@@ -10,7 +10,7 @@ describe ShouldReekOnlyOf do
     @expected_context_name = 'SmellyClass#big_method'
     @matcher = ShouldReekOnlyOf.new(@expected_smell_class, [/#{@expected_context_name}/])
     @examiner = mock('examiner', :null_object => true)
-    @examiner.should_receive(:all_active_smells).and_return {smells}
+    @examiner.should_receive(:smells).and_return {smells}
     @match = @matcher.matches_examiner?(@examiner)
   end
 
